# phozzy

./: Filter_observations_test_run.txt  GRB_parameters_test_run.txt  Initial_guesses_test_run.txt  README.md  Test_MCMC_testing_datastore.txt  Test_datastore.txt  Uncertainties_test_run.txt  analysis.py  attenuation.py  build_spectrum.py  create_data_set.py  d_L_calc.py  example_main.py  extinction.py  filters.py  main.py  mcmc.py  phozzy.py  power_law.py  pyproject.toml  test_run_results_0_datastore.txt  test_run_results_10_datastore.txt  test_run_results_11_datastore.txt  test_run_results_12_datastore.txt  test_run_results_13_datastore.txt  test_run_results_14_datastore.txt  test_run_results_15_datastore.txt  test_run_results_16_datastore.txt  test_run_results_17_datastore.txt  test_run_results_18_datastore.txt  test_run_results_19_datastore.txt  test_run_results_1_datastore.txt  test_run_results_20_datastore.txt  test_run_results_21_datastore.txt  test_run_results_22_datastore.txt  test_run_results_23_datastore.txt  test_run_results_24_datastore.txt  test_run_results_2_datastore.txt  test_run_results_3_datastore.txt  test_run_results_4_datastore.txt  (+6 more)
src/: LICENSE  create_data_set.py  example_main.py  extinction.py  mcmc.py  phozzy.py
src/phozzy/: .coverage  analysis.py  attenuation.py  build_spectrum_special.py  create_data_set.py  d_L_calc.py  example_main.py  filters.py  get_errorbars.py  joint_fit.py
src/phozzy/ME_model_code/: analysis.py  build_spectrum_ME_model.py  (+5 more)
tests/: attenuation_test.py  dL_calc_test.py  extinction_test.py  power_law_test.py  testing.py
